--- a/css/general.css
+++ b/css/general.css
@@ -45,7 +45,7 @@ header .logo {
   letter-spacing: 1px;
   transition: 0.7s;
   font-weight: bold;
-  font-family: "Great Vibes", sans-serif;
+  font-family: "Righteous", cursive;
 }
 .nav-bar {
   display: flex;
@@ -133,6 +133,6 @@ footer .container {
 }
 footer .logo {
   font-weight: bold;
-  font-family: "Great Vibes", sans-serif;
+  font-family: "Righteous", cursive;
   color: #22a6b3;
 }
