authentication.css, admin signup and login updated

--- a/css/adminlogin.css
+++ b/css/adminlogin.css
@@ -6,7 +6,7 @@
   } 
   
   form {
-      margin-top: 110px;
+      margin-top: 130px;
   
   }
   
@@ -73,4 +73,12 @@
   input[type="password"]:focus {
     background-color: #ddd;
     outline: none;
+  }
+  .footer 
+   {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+
   }
