--- a/css/authentication.css
+++ b/css/authentication.css
@@ -1,14 +1,17 @@
-.banner {
+/* .banner {
   width: 100%;
   height: 100vh;
   background-size: cover;
   margin-top: 110px;
-}
+} */
 
 form {
-  margin-top: 110px;
+  height: 100vh;
 }
-
+footer {
+  display: fixed;
+  bottom: 0;
+}
 label {
   margin-top: 10px;
   float: left;
@@ -30,7 +33,8 @@ label {
   } */
 
 .loginbtn,
-.cancelbtn {
+.cancelbtn,
+.signupbtn {
   background-color: lightgreen;
   color: white;
   padding: 10px 15px;
