--- a/css/category-wator-color.css
+++ b/css/category-wator-color.css
@@ -1,14 +1,3 @@
-header .logo {
-  position: relative;
-  font-weight: 700;
-  color: #22a6b3;
-  text-decoration: none;
-  font-size: 2em;
-  letter-spacing: 1px;
-  transition: 0.7s;
-  font-weight: bold;
-  font-family: "Righteous", cursive;
-}
 .container {
   position: relative;
 }
@@ -36,11 +25,13 @@ h1 {
   grid-gap: 2vmin;
   justify-items: center;
   align-items: center;
+  background-color: black;
 
   overflow: scroll;
 }
 
 .image-item {
+  margin-top: 80px;
   z-index: 1;
   grid-column: span 2;
   max-width: 100%;
@@ -54,6 +45,6 @@ h1 {
 
 .image-item:hover {
   z-index: 2;
-  transform: scale(1.5);
-  clip-path: inset(5% 0 15% 0);
+  transform: scale(1.8);
+  clip-path: inset(19% 0 16% 0);
 }
