--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  height: 100vh;
+  height: auto;
   width: 100%;
   font-family: "Raleway", serif;
 }
@@ -17,13 +17,14 @@ header {
   width: 100%;
   height: 60px;
   z-index: 20;
+  overflow: hidden;
 }
 .left-area h3 {
   color: #fff;
-  margin: 0;
+  margin: 0% 0% 0% 45%;
   text-transform: uppercase;
-  font-size: 22px;
-  font-weight: bold; 
+  font-size: 1.1vw;
+  font-weight: bold;
 }
 
 .left-area span {
@@ -31,158 +32,147 @@ header {
 }
 
 .logout-btn {
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background: green;
+  padding: 0.5% 0.5% 0.5% 0.5%;
+  background: rgba(0, 150, 0, 1);
   text-decoration: none;
   float: right;
-  margin-top: -35px;
-  margin-right: 40px;
+  margin: -2% 0% 0% 0%;
   border-radius: 15px;
-  font-size: 18px;
-  color: #fff;
+  font-size: 1vw;
+  color: white;
   font-weight: 600;
-  transition: 0.5s;
-  transition-property: background-color;
+  transition: 0.2s;
+  border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .logout-btn:hover {
-  background-color: #fff;
-  border: 1px solid tomato;
-  color: tomato;
+  background: rgba(0, 180, 0, 1);
+  color: white;
+  border: 1px solid rgba(255, 255, 255, 1);
+}
+
+#main {
+  width: 10%;
+  height: auto;
+  float: left;
+  color: white;
+  font-size: 2.5vw;
+  margin: -1% 0% 0% -1.1%;
 }
 
 /* side bar */
-.side-bar {
+#side-bar {
   background-color: #2f323a;
-  margin-top: 60px;
-  padding-top: 0px;
-  position: fixed;
-  left: 0;
-  width: 250px;
+  margin: 3% 0% 0% 0%;
+  padding: 0% 0% 0% 0%;
+  width: 10%;
   height: 100vh;
-  transition: all 0.5s;
+  transition: all 0.2s;
+  overflow: hidden;
+  transform: translate3d(-200px, 0px, 0px);
+  position: fixed;
+  z-index: 20;
+  float: left;
 }
-.side-bar .profile_image {
-  width: 100px;
-  height: 100px;
+#side-bar .profile_image {
+  width: 140px;
+  height: 140px;
   border-radius: 50%;
   margin-bottom: 10px;
+  background: rgba(255, 255, 255, 1);
 }
-.side-bar h4 {
+#side-bar h4 {
   color: #ccc;
   margin-top: 0;
   margin-bottom: 25px;
 }
 
-.side-bar a {
+#side-bar a {
   color: #fff;
   display: block;
   width: 100%;
-  line-height: 80px;
+  line-height: 5vw;
   text-decoration: none;
-  padding-left: 40px;
-  font-size: 20px;
+  padding: 0% 0% 0% 10%;
+  font-size: 1vw;
   transition: all 0.2s;
 }
 
-.side-bar a:hover {
+#side-bar a:hover {
   background: tomato;
 }
-.side-bar i {
+#side-bar i {
   padding-right: 5px;
-  font-size: 30px;
-}
-label #sidebar_btn {
-  z-index: 1;
-  color: #fff;
-  position: fixed;
-  cursor: pointer;
-  left: 300px;
-  font-size: 30px;
-  margin: 5px 0;
-  transition: all 0.2s; 
+  font-size: 1.5vw;
 }
 
-label #sidebar_btn:hover {
-  color: tomato;
-}
+/*#check:checked ~ .side-bar {
+  left: 00%; opacity:1;
+} */
 
-#check:checked ~ .side-bar {
-  left: -190px;
-}
+/*#check:checked ~ .side-bar a {
+  font-size: 0vw;
+  margin-left: 10vw;
+  width: 10vw;
+  opacity:0;
+} */
 
-#check:checked ~ .side-bar a span {
-  display: none;
-}
-#check:checked ~ .side-bar a {
-  font-size: 20px;
-  margin-left: 170px;
-  width: 80px;
-}
-#check {
-  display: none;
-}
-
-/* dashboard content */
+/* dashboard content 
 .content {
-  margin-left: 250px;
-  height: 100vh;
+  margin:0% 0% 10% 10%;
+  height: auto; transition:0.2s; overflow:hidden;
 }
-#check:checked ~ .content {
-  margin-left: 60px;
-}
+*/
+
 .top-container {
-  padding-top: 80px;
-  padding-left: 1%;
+  padding: 4% 0% 0% 1%;
   display: flex;
-  flex-wrap: wrap; background:blue;
+  flex-wrap: wrap;
 }
 
-.add-photo-btn,
-.submit-photo-btn {
-  width: 200px;
-  padding: 15px;
+.add-photo-btn {
+  width: 20%;
+  padding: 1% 1% 1% 1%;
   font-family: "roboto condensed", sans-serif;
-  font-size: 17px;
+  font-size: 0.9vw;
   text-transform: uppercase;
   letter-spacing: 1px;
-  background: transparent;
-  color: black;
+  background: rgba(0, 120, 0, 1);
+  color: rgba(220, 220, 220, 1);
   border-radius: 50px;
-  border: 2px solid green;
+  border: 1px solid rgba(0, 155, 0, 1);
   cursor: pointer;
-  transition: transform 0.3s;
-  margin-left: 1%;
+  transition: transform 0.2s;
+  margin: 0% 0% 0% 1%;
   border-radius: 15px !important;
+  transition: 0.1s;
 }
 .add-photo-btn:hover,
 .submit-photo-btn:hover {
-  background: green;
-  color: #fff;
-  font-weight: bold;
+  background: rgba(0, 200, 0, 1);
+  color: rgba(255, 255, 255, 1);
 }
 
 /* search bar */
 .wrapper {
-  padding: 0 70px;
+  padding: 0.3%;
+  width: 50%;
 }
 .wrapper .search_box {
-  width: 500px;
-  background: #fff;
+  width: 50%;
+  background: rgba(240, 240, 240, 1);
   border-radius: 5px;
-  height: 65px;
+  height: 6vh;
   display: flex;
-  padding: 10px;
+  padding: 0.5vw;
   box-shadow: 0 8px 6px -10px #b3c6ff;
+  margin: 0% 0% 0% 30%;
 }
 
 .wrapper .search_box .dropdown {
-  width: 100px;
+  width: 30%;
   border-right: 2px solid #dde2f1;
-  color: #9fa3b1;
+  color: rgba(150, 150, 150, 1);
   position: relative;
   cursor: pointer;
   z-index: 10;
@@ -199,7 +189,7 @@ label #sidebar_btn:hover {
   top: 70px;
   left: -10px;
   background: #fff;
-  width: 100px;
+  width: 10vw;
   border-radius: 5px;
   padding: 20px;
   display: none;
@@ -258,22 +248,21 @@ label #sidebar_btn:hover {
 
 /* table list */
 .table-container {
-  margin-top: 450px;
+  margin: 5% 0% 5% 0%;
   position: relative;
+  z-index: 10;
 }
 .table-container-category {
   margin-top: 300px;
   position: relative;
 }
+
 .content-table {
   border-collapse: collapse;
-  margin: 25px 0;
-  font-size: 16px;
-  width: 80%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 0% 0% 0% 8%;
+  font-size: 1vw;
+  width: 80vw;
+  position: relative;
   border-radius: 5px 5px 0 0;
   overflow: hidden;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.15);
@@ -304,13 +293,32 @@ label #sidebar_btn:hover {
 }
 
 .content-table tbody tr:nth-of-type(even) {
-  background-color: rgb(243, 240, 240);
+  background-color: rgba(255, 255, 255, 1);
 }
+
+.content-table tbody tr:nth-of-type(odd) {
+  background-color: rgba(240, 240, 240, 1);
+}
+
+.content-table tbody tr:nth-of-type(even):hover,
+.content-table tbody tr:nth-of-type(odd):hover {
+  background-color: rgba(230, 230, 230, 1);
+}
+
+.content-table tbody tr:hover img {
+  border: 2px solid rgba(0, 0, 0, 1);
+}
+
 .content-table tbody tr:last-of-type {
   border-bottom: tomato solid 1px;
 }
 .content-table img {
-  padding: 10px 5px;
+  padding: 0.2% 0.2% 0.2% 0.2%;
+  transition: 0.2s;
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  width: 7vw;
+  height: 11vh;
 }
 .fa-trash {
   font-size: 25px;
@@ -332,6 +340,7 @@ label #sidebar_btn:hover {
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(20px);
   position: absolute;
   top: 0;
   left: 0;
@@ -344,7 +353,7 @@ label #sidebar_btn:hover {
 .bg-modal-add-photo,
 .bg-modal-edit-photo,
 .bg-modal-delete-photo {
-  margin-top: -540px;
+  position: fixed;
 }
 .add-photo-modal-content,
 .edit-photo-modal-content,
@@ -431,4 +440,24 @@ label #sidebar_btn:hover {
   background-color: tomato;
   color: #fff;
   border-radius: 15px;
+}
+
+.submit-photo-btn {
+  width: 100%;
+  height: auto;
+  float: left;
+  background: blue;
+  margin: 50% 0% 0% 0%;
+  padding: 1% 1% 1% 1%;
+  font-family: "roboto condensed", sans-serif;
+  font-size: 0.9vw;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background: rgba(0, 150, 0, 1);
+  color: white;
+  border-radius: 50px;
+  border: 1px solid rgba(0, 155, 0, 1);
+  cursor: pointer;
+  transition: transform 0.2s;
+  border-radius: 15px !important;
 }
