--- a/css/submenu.css
+++ b/css/submenu.css
@@ -19,7 +19,7 @@ a {
 /* links submenu*/
 .submenu {
   background: #fff;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 5px 15px 15px rgba(0, 0, 0, 0.2);
   position: absolute;
   top: 4rem;
   left: 50%;
@@ -64,7 +64,7 @@ a {
   margin-bottom: 1.5rem;
 }
 .submenu-center a {
-  width: 10rem;
+  width: 9rem;
   display: block;
   color: #e91e69;
   text-transform: capitalize;
@@ -72,4 +72,13 @@ a {
 .submenu-center i {
   color: #badc58;
   margin-right: 1rem;
+}
+@media screen and (max-width: 768px) {
+  .submenu {
+    background-color: white;
+    opacity: 0.96;
+  }
+  .submenu-center a {
+    width: 8rem;
+  }
 }
