--- a/css/general.css
+++ b/css/general.css
@@ -76,18 +76,65 @@ header nav ul li a:hover {
     color: black;
   }  */
 .login-btn {
+  position: relative;
   padding: 12px;
   font-size: 16px;
   background-color: transparent;
   color: #22a6b3;
   border-radius: 5px;
   border: 1px solid#22a6b3;
-  transition: all 0.5s;
+  /* transition: all 0.5s; */
+  cursor: pointer;
+  transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
 }
-.login-btn:hover {
+/* .login-btn:hover {
   color: #fff;
   background-color: #22a6b3;
   border-bottom: none;
+} */
+.login-btn:before,
+.login-btn:after {
+  content: "";
+  position: absolute;
+  transition: inherit;
+  z-index: -1;
+}
+.login-btn:hover {
+  color: tomato;
+  transition-delay: 0.5s;
+  border-color: none;
+}
+
+.login-btn:hover:before {
+  transition-delay: 0s;
+}
+
+.login-btn:hover:after {
+  background: #fff;
+  transition-delay: 0.35s;
+}
+
+.login-btn:before,
+.login-btn:after {
+  top: 0;
+  width: 0;
+  height: 100%;
+}
+
+.login-btn:before {
+  right: 0;
+  border: 1px solid #fff;
+  border-left: 0;
+  border-right: 0;
+}
+
+.login-btn:after {
+  left: 0;
+}
+
+.login-btn:hover:before,
+.login-btn:hover:after {
+  width: 100%;
 }
 
 .nav-bar {
@@ -108,10 +155,11 @@ header nav ul li a:hover {
   color: #22a6b3;
   font-weight: bold;
   padding: 20px, 30px;
+  transition: 0.3s;
 }
 .nav-link li a:hover {
-  color: #000;
-  border-bottom: 2px solid tomato;
+  color: tomato;
+  font-size: 20px;
 }
 .burger {
   display: none;
@@ -119,7 +167,7 @@ header nav ul li a:hover {
 .burger div {
   width: 25px;
   height: 3px;
-  background-color: black;
+  background-color: #22a6b3;
   margin: 5px;
 }
 
