--- a/css/general.css
+++ b/css/general.css
@@ -82,7 +82,7 @@ header nav ul li a:hover {
   background-color: transparent;
   color: #22a6b3;
   border-radius: 5px;
-  border: 1px solid#22a6b3;
+  border: none;
   /* transition: all 0.5s; */
   cursor: pointer;
   transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
