--- a/css/category-people.css
+++ b/css/category-people.css
@@ -50,6 +50,10 @@
     width: 100%;
 }
 
+.image-container img:hover {
+    cursor: pointer;
+}
+
 .showCategory {
     display: block;      
     max-width: 100%; 
@@ -76,6 +80,52 @@
 .btn.active {
     background-color: #666666;
     color: #ffffff;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    padding: 80px 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modalImage {
+    margin: auto;
+    display: block;
+    width: 80% !important;
+    height: auto;
+}
+
+.modalCaption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    text-align: center;
+    color: #f1f1f1;
+    padding: 16px 0 32px 0;
+}
+
+.modalClose {
+    position: absolute;
+    top: 0;
+    right: 32px;
+    color: #f1f1f1;
+    font-size: 60px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.modalClose:hover,
+.modalClose:focus {
+    color: #666666;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* Responsive layout - makes a two column layout */
