fix the bug about scroll issue in mobile version

--- a/css/general.css
+++ b/css/general.css
@@ -222,7 +222,8 @@ footer .logo {
 
 @media screen and (max-width: 768px) {
   body {
-    overflow: hidden;
+    overflow: scroll;
+    height: 100%;
   }
   .nav-link {
     position: absolute;
