--- a/css/submenu.css
+++ b/css/submenu.css
@@ -1,6 +1,3 @@
-:root {
-}
-
 *,
 ::after,
 ::before {
@@ -77,8 +74,28 @@ a {
   .submenu {
     background-color: white;
     opacity: 0.96;
+    padding: 1rem 0 1rem 1rem;
   }
   .submenu-center a {
-    width: 8rem;
+    width: 7.5rem;
+  }
+  .submenu-center i {    
+    margin-right: 0.25rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .submenu {
+    font-size: 14px;
+  }
+  .submenu-center {
+    display: grid;
+    gap: .5rem 0.5rem;
+  }
+  .submenu-center a {
+    width: 6rem;
+  }
+  .submenu-center i {    
+    margin-right: 0;
   }
 }
