--- a/css/category-oilpainting.css
+++ b/css/category-oilpainting.css
@@ -2,15 +2,14 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  background: url("../../images/painting.jpg") no-repeat;
+  background: blanchedalmond;
   background-size: cover;
   background-position: center;
 }
 .imgBox {
   width: 1220px;
   margin: 120px auto 20px;
+  height: 100vh;
 }
 .imgBox img {
   width: 100%;
