bug submenu changed

--- a/css/submenu.css
+++ b/css/submenu.css
@@ -79,7 +79,7 @@ a {
   .submenu-center a {
     width: 7.5rem;
   }
-  .submenu-center i {    
+  .submenu-center i {
     margin-right: 0.25rem;
   }
 }
@@ -90,12 +90,12 @@ a {
   }
   .submenu-center {
     display: grid;
-    gap: .5rem 0.5rem;
+    gap: 0.5rem 0.5rem;
   }
   .submenu-center a {
     width: 6rem;
   }
-  .submenu-center i {    
+  .submenu-center i {
     margin-right: 0;
   }
 }
